# toon-diff

./: .gitignore  LICENSE  README.md  RETROSPECTIVE.md  ROADMAP.md  RUN.md  blog-post-draft.md  blog-post.md  cli-v2.ts  filing-draft-ts-decoder-precision.md  package-lock.json  package.json
adapters/: RUST-NOTES.md  adapter.py  contract.ts  python-persistent.ts  python.ts  rust-persistent.ts  rust.ts  selftest-claims.ts  selftest-parity-rust.ts  selftest-parity.ts  ts.ts
adapters/rust-bridge/: Cargo.toml
adapters/rust-bridge/src/: main.rs
oracle/: canonicalize.ts  compare.ts  ingest.ts  selftest-numbers.ts  selftest.ts
probe/: corpus.ts  explain.ts  grid.ts  selftest-corpus.ts  selftest-explain.ts  selftest-grid.ts  selftest-spec-rules.ts  spec-rules.ts
probe/cases/: 005-almost-uniform-table.json  008-unicode.json  009-whitespace.json  010-numbers.json  011-safe-integer-boundary.json  012-just-outside-boundary.json
probe/cases/seeds/: 001-empty-object.meta.json  002-empty-array.meta.json  003-nested-object.meta.json  004-uniform-table.meta.json  005-almost-uniform-table.meta.json  006-delimiter-stress.json  006-delimiter-stress.meta.json  007-string-lookalikes.json  007-string-lookalikes.meta.json  008-unicode.meta.json  009-whitespace.meta.json  010-numbers.meta.json  011-safe-integer-boundary.meta.json  012-just-outside-boundary.meta.json  013-precision-loss-2pow53plus1.json  013-precision-loss-2pow53plus1.meta.json
